syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "./notification-service";

package notification;

// Message representing a notification
message Notification {
  int32 id = 1;
  string title = 2;
  string content = 3;
  NotificationType type = 4;
  string recipient = 5;
  bool read = 6;
  int64 timestamp = 7;
}

// Enum representing notification types
enum NotificationType {
  EMAIL = 0;
}

// Message representing the request to send a notification
message SendNotificationRequest {
  string title = 1 [(validate.rules).string.min_len = 1];
  string content = 2 [(validate.rules).string.min_len = 1];
  NotificationType type = 3;
  string recipient = 4;
}

// Message representing the response of sending a notification
message SendNotificationResponse {
  int32 id = 1;
  string message = 2;
}

// Service definition for the notification service
service NotificationService {
  // RPC method to send a notification
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {
    option (google.api.http) = {
      post: "/v1/notification"
      body: "*"
    };
  }
}